# lifefarm

./: README.md
whistle/: .env  .gitignore  Cargo.toml  README.md  db.sqlite  diesel.toml
whistle/migrations/2024-08-25-071446_create_cfg_user_tbl/: down.sql  up.sql
whistle/migrations/2024-08-25-081203_create_bp_prnp_tbl/: down.sql  up.sql
whistle/migrations/2024-08-25-081229_create_bp_period_tbl/: up.sql
whistle/migrations/2024-09-18-092415_create_bpnt_tbl/: down.sql  up.sql
whistle/src/: main.rs  schema.rs
whistle/src/api/: entity.rs
whistle/src/api/repository/: bpnt.rs  cfg_user.rs  mod.rs
whistle/src/config/: database.rs
