[package]
name = "whistle"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version="0.4.38", features = ["serde"]}
diesel = {version="2.2.3", features = ["sqlite", "chrono"]}
dotenv = "0.15.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
serde = {version="1.0.210", features = ["derive"]}
